# Auto

./: .gitignore  CMakeLists.txt  Catalog.txt  DASHBOARD_IMPERIO_MUTANTE.md  EMPIRE_APOGEU_TOTAL.md  EMPIRE_CORE_TOOLKIT.md  EMPIRE_DASHBOARD_V2.json  EMPIRE_README.md  EMPIRE_SLO.md  EXECUTIVE_SUMMARY.txt  EXPANSION_STRATEGY_V2.md  FUTURE_EXECUTION_PLAN.md  IMP_OPERATIONAL_MANUAL.md  MANUAL_DE_OPERACAO.md  MAPA_GERAL.md  MAPA_RECURSOS_IMPERIO_MUTANTE.md  PROJETO_COMPLETO.md  PROPOSTA_EXPANSAO_V3.md  README.md  RELATORIO_FUNCOES.md  RESUMO_EXECUTIVO_IMPERIO_MUTANTE.md  SECRET_MANAGEMENT.md  STATUS_ATUAL_PROJETO.md  TOTAL_RESULTADO.txt  VERIFICATION_REPORT.txt  __init__.py  add_secret.sh  backup_manager.py  bandit-initial.json  bandit.yaml  classifier.py  config.json  config_processor.py  empire_config.json  empire_dashboard_v2.py  empire_waf.sh  fusion_log.txt  gui.py  integrity_checker.py  launcher.py  (+14 more)
NUCLEO_ZENITH/: AETHER_MANIFEST.md  aether_liquidator.py  aether_providence.py  aether_void_shield.py  zenith_master.py
PROGRESSO/: CERTIFICADO_SUPREMACIA_OMNIS.md
PROTOCOLS/: APOGEU_VERIFICATION.md
SINGULARIDADE/: SUPREMACIA_FINAL.md  nexus_singularity.py
VELOCITY_OPTIMIZATION/: VELOCITY_REPORT.md  arbitrage_engine_v2_1_FIXED.py  optimized_cicd.yml  sovereign-pipeline-FINAL.yml
grouter_data/: swarm_nodes.status
iac-expansion-l2/: main.tf  variables.tf
iac-expansion-v2-automation/: main.tf  necromancy_iac_report.md  variables.tf
include/: soup_log.h  storage.h
infrastructure_scripts/: arbitrage_engine_v2_1.py  load_simulator.py
legacy/: Evolution_Plan.txt  (+25 more)
(+87 files in other folders)
